--- a/src/main/resources/fxml/myAccount.fxml
+++ b/src/main/resources/fxml/myAccount.fxml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.MyAccountController">
    <left>
       <AnchorPane blendMode="DARKEN" prefHeight="400.0" prefWidth="150.0" BorderPane.alignment="CENTER">
@@ -32,7 +27,7 @@
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button layoutX="13.0" layoutY="356.0" mnemonicParsing="false" onAction="#logout" prefWidth="125.0" text="Log Out" onAction="#logout">
+            <Button layoutX="13.0" layoutY="356.0" mnemonicParsing="false" onAction="#logout" prefWidth="125.0" text="Log Out">
                <font>
                   <Font size="14.0" />
                </font>
