--- a/src/main/resources/fxml/myAccount.fxml
+++ b/src/main/resources/fxml/myAccount.fxml
@@ -7,7 +7,7 @@
    <left>
       <AnchorPane blendMode="DARKEN" prefHeight="400.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="13.0" layoutY="14.0" mnemonicParsing="false" prefWidth="125.0" text="All Trades">
+            <Button layoutX="13.0" layoutY="14.0" mnemonicParsing="false" onAction="#allTrades" prefWidth="125.0" text="All Trades">
                <font>
                   <Font size="14.0" />
                </font>
