--- a/src/main/resources/fxml/trades.fxml
+++ b/src/main/resources/fxml/trades.fxml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.TradesController">
-   <children>
-      <ListView fx:id="tradesList" layoutX="29.0" layoutY="27.0" prefHeight="345.0" prefWidth="211.0" />
-   </children>
+<AnchorPane prefHeight="400.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="client.TradesController">
+    <children>
+        <TableView fx:id="tableView" layoutX="28.0" layoutY="21.0" prefHeight="352.0" prefWidth="338.0">
+            <columns>
+                <TableColumn fx:id="assetName" prefWidth="101.77016258239746" text="Asset"/>
+                <TableColumn fx:id="quantity" prefWidth="58.4940185546875" text="Qty"/>
+                <TableColumn fx:id="price" prefWidth="99.0059814453125" text="Price"/>
+                <TableColumn fx:id="tradeType" prefWidth="77.7298583984375" text="Buy/Sell"/>
+            </columns>
+        </TableView>
+    </children>
 </AnchorPane>
