--- a/src/main/resources/fxml/myAccount.fxml
+++ b/src/main/resources/fxml/myAccount.fxml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.MyAccountController">
    <left>
       <AnchorPane blendMode="DARKEN" prefHeight="400.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="13.0" layoutY="14.0" mnemonicParsing="false" onAction="#allTrades" prefWidth="125.0" text="All Trades">
+            <Button layoutX="12.0" layoutY="14.0" mnemonicParsing="false" onAction="#allTrades" prefWidth="125.0" text="All Trades">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" layoutX="13.0" layoutY="51.0" mnemonicParsing="false" prefWidth="125.0" text="My Unit's Trades">
+            <Button alignment="CENTER" layoutX="12.0" layoutY="83.0" mnemonicParsing="false" prefWidth="125.0" text="My Unit's Trades">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button layoutX="13.0" layoutY="87.0" mnemonicParsing="false" prefWidth="125.0" text="New Trade">
+            <Button layoutX="12.0" layoutY="118.0" mnemonicParsing="false" prefWidth="125.0" text="New Trade">
                <font>
                   <Font size="14.0" />
                </font>
@@ -28,6 +33,11 @@
                </font>
             </Button>
             <Button layoutX="13.0" layoutY="356.0" mnemonicParsing="false" onAction="#logout" prefWidth="125.0" text="Log Out">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Button layoutX="12.0" layoutY="48.0" mnemonicParsing="false" onAction="#allTrades" prefWidth="125.0" text="Trade History">
                <font>
                   <Font size="14.0" />
                </font>
