--- a/src/main/resources/fxml/trades.fxml
+++ b/src/main/resources/fxml/trades.fxml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane prefHeight="400.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="client.TradesController">
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.TradesController">
     <children>
-        <TableView fx:id="tableView" layoutX="28.0" layoutY="21.0" prefHeight="352.0" prefWidth="338.0">
+        <TableView fx:id="tableView" layoutX="28.0" layoutY="21.0" prefHeight="317.0" prefWidth="533.0">
             <columns>
-                <TableColumn fx:id="assetName" prefWidth="101.77016258239746" text="Asset"/>
-                <TableColumn fx:id="quantity" prefWidth="58.4940185546875" text="Qty"/>
-                <TableColumn fx:id="price" prefWidth="99.0059814453125" text="Price"/>
-                <TableColumn fx:id="tradeType" prefWidth="77.7298583984375" text="Buy/Sell"/>
+                <TableColumn fx:id="dateListed" prefWidth="167.11034202575684" text="Date Listed" />
+                <TableColumn fx:id="asset" prefWidth="83.00691223144531" text="Asset" />
+                <TableColumn fx:id="quantity" prefWidth="92.49310302734375" text="Qty" />
+                <TableColumn fx:id="price" minWidth="8.8690185546875" prefWidth="86.66207885742188" text="Price" />
+                <TableColumn fx:id="tradeType" prefWidth="103.73455810546875" text="Buy/Sell" />
             </columns>
         </TableView>
+      <Button layoutX="28.0" layoutY="356.0" mnemonicParsing="false" text="&lt;&lt; Back" onAction="#goBack" />
     </children>
 </AnchorPane>
