--- a/src/main/resources/fxml/trades.fxml
+++ b/src/main/resources/fxml/trades.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.TradesController">
     <children>
-        <TableView fx:id="tableView" layoutX="28.0" layoutY="21.0" prefHeight="317.0" prefWidth="533.0">
+        <TableView fx:id="tableView" layoutX="15.0" layoutY="15.0" prefHeight="310.0" prefWidth="569.0">
             <columns>
                 <TableColumn fx:id="dateListed" prefWidth="167.11034202575684" text="Date Listed" />
                 <TableColumn fx:id="asset" prefWidth="83.00691223144531" text="Asset" />
@@ -16,6 +17,7 @@
                 <TableColumn fx:id="tradeType" prefWidth="103.73455810546875" text="Buy/Sell" />
             </columns>
         </TableView>
-      <Button layoutX="28.0" layoutY="356.0" mnemonicParsing="false" text="&lt;&lt; Back" onAction="#goBack" />
+      <Button layoutX="15.0" layoutY="360.0" mnemonicParsing="false" onAction="#goBack" text="&lt;&lt; Back" />
+      <Label layoutX="15.0" layoutY="334.0" text="Double click on a row in the table to view more information about the trade" />
     </children>
 </AnchorPane>
