FullAsset implementation and asset GUI on client

--- a/src/main/resources/fxml/test.fxml
+++ b/src/main/resources/fxml/test.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="140.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.TradeInfoDialogController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="140.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.dialog.TradeInfoDialogController">
    <children>
       <Label fx:id="tradeId" layoutX="15.0" layoutY="15.0" text="Trade ID: " />
       <Label fx:id="assetId" layoutX="15.0" layoutY="35.0" text="Asset ID: " />
