--- a/src/main/resources/fxml/myAccount.fxml
+++ b/src/main/resources/fxml/myAccount.fxml
@@ -42,6 +42,11 @@
                   <Font size="14.0" />
                </font>
             </Button>
+            <Button layoutX="12.0" layoutY="154.0" mnemonicParsing="false" prefWidth="125.0" text="Assets" onAction="#assets">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </left>
