--- a/src/main/resources/fxml/assets.fxml
+++ b/src/main/resources/fxml/assets.fxml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="client.AssetsController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.AssetsController">
     <children>
-        <Button layoutX="15.0" layoutY="362.0" mnemonicParsing="false" text="&lt;&lt; Back" onAction="#goBack"/>
+        <Button layoutX="15.0" layoutY="362.0" mnemonicParsing="false" onAction="#goBack" text="&lt;&lt; Back" />
         <TableView fx:id="tableView" layoutX="15.0" layoutY="15.0" prefHeight="333.0" prefWidth="570.0">
             <columns>
-                <TableColumn fx:id="name" minWidth="0.0" prefWidth="215.9848117828369" text="Asset Name"/>
-                <TableColumn fx:id="dateAdded" prefWidth="162.01513671875" text="Date Added"/>
-                <TableColumn fx:id="quantity" prefWidth="192.31417846679688" text="Amount in Circulation"/>
+                <TableColumn fx:id="name" minWidth="0.0" prefWidth="204.45224952697754" text="Asset Name" />
+                <TableColumn fx:id="dateAdded" prefWidth="174.04779052734375" text="Date Added" />
+                <TableColumn fx:id="quantity" prefWidth="170.68759155273438" text="Amount in Circulation" />
             </columns>
         </TableView>
-        <Button layoutX="509.0" layoutY="362.0" mnemonicParsing="false" text="Add Asset" onAction="#onAddAsset"/>
-        <TextField fx:id="newAssetName" layoutX="341.0" layoutY="362.0" prefHeight="25.0" prefWidth="160.0"
-                   promptText="New asset name..."/>
+        <Button layoutX="509.0" layoutY="362.0" mnemonicParsing="false" onAction="#onAddAsset" prefHeight="26.0" prefWidth="76.0" text="Add" />
+        <TextField fx:id="newAssetName" layoutX="341.0" layoutY="362.0" prefHeight="25.0" prefWidth="160.0" promptText="New asset name..." />
     </children>
 </AnchorPane>
