--- a/src/main/resources/fxml/myAccount.fxml
+++ b/src/main/resources/fxml/myAccount.fxml
@@ -17,7 +17,7 @@
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" layoutX="12.0" layoutY="83.0" mnemonicParsing="false" prefWidth="125.0" text="My Unit's Trades">
+            <Button alignment="CENTER" layoutX="12.0" layoutY="83.0" mnemonicParsing="false" prefWidth="125.0" text="My Unit's Trades" onAction="#unitTrades">
                <font>
                   <Font size="14.0" />
                </font>
@@ -42,7 +42,7 @@
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button layoutX="12.0" layoutY="154.0" mnemonicParsing="false" prefWidth="125.0" text="Assets" onAction="#assets">
+            <Button layoutX="12.0" layoutY="154.0" mnemonicParsing="false" prefWidth="125.0" text="Manage Assets" onAction="#assets">
                <font>
                   <Font size="14.0" />
                </font>
