--- a/src/main/resources/fxml/newTrade.fxml
+++ b/src/main/resources/fxml/newTrade.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
@@ -8,5 +10,7 @@
    <children>
       <Button layoutX="140.0" layoutY="249.0" mnemonicParsing="false" text="Done" />
       <Button layoutX="80.0" layoutY="249.0" mnemonicParsing="false" text="Cancel" />
+      <ChoiceBox fx:id="unit" layoutX="12.0" layoutY="15.0" prefHeight="26.0" prefWidth="169.0" />
+      <Label layoutX="12.0" layoutY="45.0" text="Available Credits: " />
    </children>
 </AnchorPane>
