--- a/src/main/resources/fxml/unitTrades.fxml
+++ b/src/main/resources/fxml/unitTrades.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.TradesController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.UnitTradesController">
     <children>
-        <TableView fx:id="tableView" layoutX="15.0" layoutY="15.0" prefHeight="310.0" prefWidth="569.0">
+        <TableView fx:id="tableView" layoutX="15.0" layoutY="55.0" prefHeight="267.0" prefWidth="569.0">
             <columns>
                 <TableColumn fx:id="dateListed" prefWidth="167.11034202575684" text="Date Listed" />
                 <TableColumn fx:id="asset" prefWidth="83.00691223144531" text="Asset" />
@@ -19,5 +20,9 @@
         </TableView>
       <Button layoutX="15.0" layoutY="360.0" mnemonicParsing="false" onAction="#goBack" text="&lt;&lt; Back" />
       <Label layoutX="15.0" layoutY="334.0" text="Double click on a row in the table to view more information about the trade" />
+      <ComboBox fx:id="unitComboBox" layoutX="85.0" layoutY="14.0" prefWidth="150.0" />
+      <Label layoutX="17.0" layoutY="19.0" text="Select Unit" />
+      <Button disable="true" layoutX="487.0" layoutY="360.0" mnemonicParsing="false" onAction="#goBack" text="Remove Trade" />
+      <Button disable="true" layoutX="406.0" layoutY="360.0" mnemonicParsing="false" onAction="#goBack" text="Edit Trade" />
     </children>
 </AnchorPane>
