--- a/src/main/resources/fxml/assets.fxml
+++ b/src/main/resources/fxml/assets.fxml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.AssetsController">
     <children>
         <Button layoutX="15.0" layoutY="362.0" mnemonicParsing="false" onAction="#goBack" text="&lt;&lt; Back" />
@@ -16,7 +12,9 @@
                 <TableColumn fx:id="quantity" prefWidth="170.68759155273438" text="Amount in Circulation" />
             </columns>
         </TableView>
-        <Button layoutX="509.0" layoutY="362.0" mnemonicParsing="false" onAction="#onAddAsset" prefHeight="26.0" prefWidth="76.0" text="Add" />
-        <TextField fx:id="newAssetName" layoutX="341.0" layoutY="362.0" prefHeight="25.0" prefWidth="160.0" promptText="New asset name..." />
+        <Button layoutX="411.0" layoutY="362.0" mnemonicParsing="false" onAction="#onAddAsset" prefHeight="26.0" prefWidth="76.0" text="Add" />
+        <TextField fx:id="newAssetName" layoutX="241.0" layoutY="362.0" prefHeight="25.0" prefWidth="160.0" promptText="New asset name..." />
+      <Button disable="true" layoutX="509.0" layoutY="362.0" mnemonicParsing="false" onAction="#onAddAsset" prefHeight="26.0" prefWidth="76.0" text="Remove" />
+      <Separator layoutX="496.0" layoutY="358.0" orientation="VERTICAL" prefHeight="34.0" prefWidth="6.0" />
     </children>
 </AnchorPane>
