--- a/src/main/resources/fxml/myAccount.fxml
+++ b/src/main/resources/fxml/myAccount.fxml
@@ -10,7 +10,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.MyAccountController">
    <left>
-      <AnchorPane blendMode="DARKEN" prefHeight="400.0" prefWidth="150.0" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="anchorPane" blendMode="DARKEN" prefHeight="400.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <children>
             <Button layoutX="12.0" layoutY="14.0" mnemonicParsing="false" onAction="#allTrades" prefWidth="125.0" text="All Trades">
                <font>
@@ -42,7 +42,7 @@
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button layoutX="12.0" layoutY="154.0" mnemonicParsing="false" prefWidth="125.0" text="Manage Assets" onAction="#assets">
+            <Button fx:id="assetsButton" layoutX="12.0" layoutY="154.0" mnemonicParsing="false" prefWidth="125.0" text="Manage Assets" onAction="#assets">
                <font>
                   <Font size="14.0" />
                </font>
