--- a/src/main/resources/fxml/manageUnits.fxml
+++ b/src/main/resources/fxml/manageUnits.fxml
@@ -17,22 +17,22 @@
           <TableColumn prefWidth="106.8609619140625" text="Quantity" />
         </columns>
       </TableView>
-      <ComboBox fx:id="unitComboBox" layoutX="17.0" layoutY="41.0" prefWidth="150.0" />
+      <ComboBox fx:id="unitComboBox" layoutX="17.0" layoutY="41.0" prefWidth="150.0" onAction="#onSelectUnit" />
       <Label layoutX="17.0" layoutY="14.0" text="Select Unit" />
       <Button layoutX="518.0" layoutY="362.0" mnemonicParsing="false" text="Remove" />
       <Button layoutX="13.0" layoutY="362.0" mnemonicParsing="false" onAction="#goBack" text="&lt;&lt; Back" />
-      <ComboBox layoutX="257.0" layoutY="362.0" prefHeight="26.0" prefWidth="100.0" promptText="Asset" />
+      <ComboBox fx:id="allAssetsComboBox" layoutX="257.0" layoutY="362.0" prefHeight="26.0" prefWidth="100.0" promptText="Asset" />
       <Button layoutX="417.0" layoutY="362.0" mnemonicParsing="false" text="Add" />
       <TextField layoutX="362.0" layoutY="362.0" prefHeight="26.0" prefWidth="51.0" promptText="Qty" />
       <Separator layoutX="16.0" layoutY="250.0" prefHeight="4.0" prefWidth="213.0" />
-      <Label layoutX="30.0" layoutY="110.0" text="Unit ID:" />
-      <Label layoutX="30.0" layoutY="135.0" text="Users: " />
-      <Label layoutX="30.0" layoutY="160.0" text="Assets Held: " />
-      <Label layoutX="30.0" layoutY="272.0" text="Available Credits: " />
+      <Label fx:id="unitIdLabel" layoutX="30.0" layoutY="110.0" text="Unit ID:" />
+      <Label fx:id="userCountLabel" layoutX="30.0" layoutY="135.0" text="Users: " />
+      <Label fx:id="assetsHeldLabel" layoutX="30.0" layoutY="160.0" text="Assets Held: " />
+      <Label fx:id="creditsLabel" layoutX="30.0" layoutY="272.0" text="Credits: " />
+      <Label fx:id="pendingTrades" layoutX="30.0" layoutY="185.0" text="Pending Trades: " />
+      <Label fx:id="completedTrades" layoutX="30.0" layoutY="210.0" text="Completed Trades: " />
       <TextField fx:id="creditsTextField" disable="true" layoutX="30.0" layoutY="299.0" prefHeight="26.0" prefWidth="114.0" promptText="Credits" />
-      <Button fx:id="saveCreditsButton" disable="true" layoutX="156.0" layoutY="299.0" mnemonicParsing="false" text="Save" />
-      <Label layoutX="30.0" layoutY="185.0" text="Pending Trades: " />
-      <Label layoutX="30.0" layoutY="210.0" text="Completed Trades: " />
+      <Button fx:id="saveCreditsButton" disable="true" layoutX="156.0" layoutY="299.0" mnemonicParsing="false" text="Save" onAction="#updateCredits" />
       <Separator layoutX="16.0" layoutY="88.0" prefHeight="4.0" prefWidth="213.0" />
    </children>
 </AnchorPane>
