--- a/src/main/resources/fxml/manageUnits.fxml
+++ b/src/main/resources/fxml/manageUnits.fxml
@@ -19,11 +19,11 @@
       </TableView>
       <ComboBox fx:id="unitComboBox" layoutX="15.0" layoutY="41.0" onAction="#onSelectUnit" prefWidth="150.0" />
       <Label layoutX="15.0" layoutY="14.0" text="Select Unit" />
-      <Button layoutX="518.0" layoutY="362.0" mnemonicParsing="false" text="Remove" />
+      <Button fx:id="removeAssetButton" layoutX="518.0" layoutY="362.0" mnemonicParsing="false" text="Remove" onAction="#removeAsset" />
       <Button layoutX="15.0" layoutY="362.0" mnemonicParsing="false" onAction="#goBack" text="&lt;&lt; Back" />
       <ComboBox fx:id="allAssetsComboBox" layoutX="257.0" layoutY="362.0" prefHeight="26.0" prefWidth="100.0" promptText="Asset" />
-      <Button layoutX="417.0" layoutY="362.0" mnemonicParsing="false" text="Add" />
-      <TextField layoutX="362.0" layoutY="362.0" prefHeight="26.0" prefWidth="51.0" promptText="Qty" />
+      <Button fx:id="addAssetButton" layoutX="417.0" layoutY="362.0" mnemonicParsing="false" text="Add" />
+      <TextField fx:id="addAssetTextField" layoutX="362.0" layoutY="362.0" prefHeight="26.0" prefWidth="51.0" promptText="Qty" />
       <Separator layoutX="15.0" layoutY="250.0" prefHeight="4.0" prefWidth="213.0" />
       <Label fx:id="unitIdLabel" layoutX="15.0" layoutY="110.0" text="Unit ID:" />
       <Label fx:id="userCountLabel" layoutX="15.0" layoutY="135.0" text="Users: " />
