--- a/src/main/resources/fxml/manageUsers.fxml
+++ b/src/main/resources/fxml/manageUsers.fxml
@@ -1,16 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.ManageUsersController">
    <children>
       <TableView layoutX="14.0" layoutY="14.0" prefHeight="333.0" prefWidth="276.0">
         <columns>
@@ -23,7 +15,7 @@
             <TableColumn prefWidth="254.0" text="Unit" />
          </columns>
       </TableView>
-      <Button layoutX="14.0" layoutY="360.0" mnemonicParsing="false" text="&lt;&lt; Back" />
+      <Button layoutX="14.0" layoutY="360.0" mnemonicParsing="false" text="&lt;&lt; Back" onAction="#goBack" />
       <Button layoutX="524.0" layoutY="215.0" mnemonicParsing="false" text="Remove" />
       <Button layoutX="435.0" layoutY="215.0" mnemonicParsing="false" text="Add" />
       <ComboBox layoutX="310.0" layoutY="215.0" prefHeight="26.0" prefWidth="116.0" />
