--- a/src/main/resources/fxml/manageUsers.fxml
+++ b/src/main/resources/fxml/manageUsers.fxml
@@ -23,7 +23,7 @@
       <Button disable="true" fx:id="accountTypeButton" layoutX="310.0" layoutY="312.0" mnemonicParsing="false" text="Make Admin" onAction="#changeAccountType" />
       <Label layoutX="314.0" layoutY="283.0" text="With selected user..." />
       <TextField fx:id="updatePasswordField" disable="true" layoutX="310.0" layoutY="351.0" prefHeight="26.0" prefWidth="147.0" promptText="New password" />
-      <Button fx:id="updatePasswordButton" disable="true" layoutX="477.0" layoutY="352.0" mnemonicParsing="false" text="Update Password" />
-      <Button fx:id="deleteUserButton" disable="true" layoutX="508.0" layoutY="311.0" mnemonicParsing="false" text="Delete User" />
+      <Button fx:id="updatePasswordButton" disable="true" layoutX="477.0" layoutY="352.0" mnemonicParsing="false" text="Update Password" onAction="#updatePassword" />
+      <Button fx:id="deleteUserButton" disable="true" layoutX="508.0" layoutY="311.0" mnemonicParsing="false" text="Delete User" onAction="#deleteUser" />
    </children>
 </AnchorPane>
