--- a/src/main/resources/fxml/myAccount.fxml
+++ b/src/main/resources/fxml/myAccount.fxml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.MyAccountController">
    <left>
       <AnchorPane fx:id="anchorPane" blendMode="DARKEN" prefHeight="400.0" prefWidth="150.0" BorderPane.alignment="CENTER">
@@ -32,7 +37,7 @@
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button layoutX="12.0" layoutY="48.0" mnemonicParsing="false" onAction="#allTrades" prefWidth="125.0" text="Trade History">
+            <Button layoutX="12.0" layoutY="48.0" mnemonicParsing="false" onAction="#tradeHistory" prefWidth="125.0" text="Trade History">
                <font>
                   <Font size="14.0" />
                </font>
