--- a/src/main/resources/fxml/manageUsers.fxml
+++ b/src/main/resources/fxml/manageUsers.fxml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.ManageUsersController">
    <children>
       <TableView fx:id="usersTableView" layoutX="14.0" layoutY="14.0" prefHeight="333.0" prefWidth="276.0">
@@ -15,15 +22,16 @@
             <TableColumn fx:id="unitNameColumn" prefWidth="254.0" text="Unit" />
          </columns>
       </TableView>
-      <Button layoutX="14.0" layoutY="360.0" mnemonicParsing="false" text="&lt;&lt; Back" onAction="#goBack" />
-      <Button fx:id="removeUnitButton" disable="true" layoutX="524.0" layoutY="215.0" mnemonicParsing="false" text="Remove" onAction="#removeFromUnit" />
-      <Button fx:id="addUnitButton" disable="true" layoutX="435.0" layoutY="215.0" mnemonicParsing="false" text="Add" onAction="#addToUnit" />
-      <ComboBox disable="true" fx:id="unitComboBox" layoutX="310.0" layoutY="215.0" prefHeight="26.0" prefWidth="116.0" />
-      <Separator layoutX="310.0" layoutY="265.0" prefHeight="0.0" prefWidth="276.0" />
-      <Button disable="true" fx:id="accountTypeButton" layoutX="310.0" layoutY="312.0" mnemonicParsing="false" text="Make Admin" onAction="#changeAccountType" />
-      <Label layoutX="314.0" layoutY="283.0" text="With selected user..." />
-      <TextField fx:id="updatePasswordField" disable="true" layoutX="310.0" layoutY="351.0" prefHeight="26.0" prefWidth="147.0" promptText="New password" />
-      <Button fx:id="updatePasswordButton" disable="true" layoutX="477.0" layoutY="352.0" mnemonicParsing="false" text="Update Password" onAction="#updatePassword" />
-      <Button fx:id="deleteUserButton" disable="true" layoutX="508.0" layoutY="311.0" mnemonicParsing="false" text="Delete User" onAction="#deleteUser" />
+      <Button layoutX="14.0" layoutY="360.0" mnemonicParsing="false" onAction="#goBack" text="&lt;&lt; Back" />
+      <Button fx:id="removeUnitButton" disable="true" layoutX="524.0" layoutY="215.0" mnemonicParsing="false" onAction="#removeFromUnit" text="Remove" />
+      <Button fx:id="addUnitButton" disable="true" layoutX="435.0" layoutY="215.0" mnemonicParsing="false" onAction="#addToUnit" text="Add" />
+      <ComboBox fx:id="unitComboBox" disable="true" layoutX="310.0" layoutY="215.0" prefHeight="26.0" prefWidth="116.0" />
+      <Separator layoutX="310.0" layoutY="268.0" prefHeight="0.0" prefWidth="276.0" />
+      <Button fx:id="accountTypeButton" disable="true" layoutX="310.0" layoutY="322.0" mnemonicParsing="false" onAction="#changeAccountType" text="Make Admin" />
+      <Label layoutX="314.0" layoutY="291.0" text="With selected user..." />
+      <TextField fx:id="updatePasswordField" disable="true" layoutX="310.0" layoutY="360.0" prefHeight="26.0" prefWidth="147.0" promptText="New password" />
+      <Button fx:id="updatePasswordButton" disable="true" layoutX="477.0" layoutY="360.0" mnemonicParsing="false" onAction="#updatePassword" text="Update Password" />
+      <Button fx:id="deleteUserButton" disable="true" layoutX="508.0" layoutY="321.0" mnemonicParsing="false" onAction="#deleteUser" text="Delete User" />
+      <Button layoutX="219.0" layoutY="360.0" mnemonicParsing="false" text="New User" onAction="#viewNewUserDialog" />
    </children>
 </AnchorPane>
