--- a/src/main/resources/fxml/tradeDialog.fxml
+++ b/src/main/resources/fxml/tradeDialog.fxml
@@ -14,6 +14,6 @@
       <Label fx:id="initialQty" layoutX="15.0" layoutY="115.0" text="Initial Quantity: " />
       <Label fx:id="filledQtyOrDate" layoutX="15.0" layoutY="135.0" text="Quantity/Date Filled: " />
       <Label fx:id="price" layoutX="15.0" layoutY="155.0" text="Price: " />
-      <Button fx:id="okButton" layoutX="137.0" layoutY="193.0" mnemonicParsing="false" onAction="#onClickOK" prefHeight="26.0" prefWidth="60.0" text="OK" />
+      <Button fx:id="okButton" layoutX="137.0" layoutY="193.0" mnemonicParsing="false" onAction="#clickOK" prefHeight="26.0" prefWidth="60.0" text="OK" />
    </children>
 </AnchorPane>
