--- a/src/main/resources/fxml/unitTrades.fxml
+++ b/src/main/resources/fxml/unitTrades.fxml
@@ -22,7 +22,7 @@
         </TableView>
       <Button layoutX="15.0" layoutY="360.0" mnemonicParsing="false" onAction="#goBack" text="&lt;&lt; Back" />
       <Label layoutX="15.0" layoutY="334.0" text="Double click on a row to view more information about the trade" />
-      <ComboBox fx:id="unitComboBox" layoutX="85.0" layoutY="14.0" onAction="#populateTable" prefWidth="150.0" />
+      <ComboBox fx:id="unitComboBox" layoutX="85.0" layoutY="14.0" onAction="#populateTable" onMouseClicked="#populateUnitComboBox" prefWidth="150.0" />
       <Label layoutX="17.0" layoutY="19.0" text="Select Unit" />
       <Button fx:id="removeTradeButton" layoutX="487.0" layoutY="360.0" mnemonicParsing="false" onAction="#deleteTrade" text="Remove Trade" />
       <Button disable="true" layoutX="406.0" layoutY="360.0" mnemonicParsing="false" onAction="#goBack" text="Edit Trade" />
