--- a/src/main/resources/fxml/newUnitDialog.fxml
+++ b/src/main/resources/fxml/newUnitDialog.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="166.0" prefWidth="220.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.dialog.NewUnitDialogController">
    <children>
-      <TextField fx:id="unitNameTextField" layoutX="20.0" layoutY="25.0" prefHeight="26.0" prefWidth="180.0" promptText="Unit name" />
-      <TextField fx:id="creditsTextField" layoutX="20.0" layoutY="64.0" prefHeight="26.0" prefWidth="180.0" promptText="Credits" />
-      <Button fx:id="createButton" layoutX="146.0" layoutY="120.0" mnemonicParsing="false" onAction="#clickCreate" prefHeight="26.0" prefWidth="56.0" text="OK" />
-      <Button fx:id="cancelButton" layoutX="83.0" layoutY="120.0" mnemonicParsing="false" onAction="#clickCancel" text="Cancel" />
+      <TextField fx:id="unitNameTextField" layoutX="14.0" layoutY="34.0" prefHeight="26.0" prefWidth="180.0" promptText="Unit name" />
+      <TextField fx:id="creditsTextField" layoutX="14.0" layoutY="84.0" prefHeight="26.0" prefWidth="180.0" promptText="Credits" />
+      <Button fx:id="" layoutX="141.0" layoutY="128.0" mnemonicParsing="false" onAction="#clickCreate" prefHeight="26.0" prefWidth="65.0" text="Add Unit" />
+      <Button fx:id="cancelButton" layoutX="11.0" layoutY="128.0" mnemonicParsing="false" onAction="#clickCancel" text="Cancel" />
+      <Label layoutX="17.0" layoutY="14.0" text="Unit name:" />
+      <Label layoutX="17.0" layoutY="64.0" text="Credits:" />
    </children>
 </AnchorPane>
