--- a/src/main/resources/fxml/manageUsers.fxml
+++ b/src/main/resources/fxml/manageUsers.fxml
@@ -25,13 +25,13 @@
       <Button layoutX="14.0" layoutY="360.0" mnemonicParsing="false" onAction="#goBack" text="&lt;&lt; Back" />
       <Button fx:id="removeUnitButton" disable="true" layoutX="524.0" layoutY="215.0" mnemonicParsing="false" onAction="#removeFromUnit" text="Remove" />
       <Button fx:id="addUnitButton" disable="true" layoutX="435.0" layoutY="215.0" mnemonicParsing="false" onAction="#addToUnit" text="Add" />
-      <ComboBox fx:id="unitComboBox" disable="true" layoutX="310.0" layoutY="215.0" prefHeight="26.0" prefWidth="116.0" />
+      <ComboBox fx:id="unitComboBox" disable="true" layoutX="310.0" layoutY="215.0" onMouseClicked="#populateUnitComboBox" prefHeight="26.0" prefWidth="116.0" />
       <Separator layoutX="310.0" layoutY="268.0" prefHeight="0.0" prefWidth="276.0" />
       <Button fx:id="accountTypeButton" disable="true" layoutX="310.0" layoutY="322.0" mnemonicParsing="false" onAction="#changeAccountType" text="Make Admin" />
       <Label layoutX="314.0" layoutY="291.0" text="With selected user..." />
       <TextField fx:id="updatePasswordField" disable="true" layoutX="310.0" layoutY="360.0" prefHeight="26.0" prefWidth="147.0" promptText="New password" />
       <Button fx:id="updatePasswordButton" disable="true" layoutX="477.0" layoutY="360.0" mnemonicParsing="false" onAction="#updatePassword" text="Update Password" />
       <Button fx:id="deleteUserButton" disable="true" layoutX="508.0" layoutY="321.0" mnemonicParsing="false" onAction="#deleteUser" text="Delete User" />
-      <Button layoutX="219.0" layoutY="360.0" mnemonicParsing="false" text="New User" onAction="#viewNewUserDialog" />
+      <Button layoutX="219.0" layoutY="360.0" mnemonicParsing="false" onAction="#viewNewUserDialog" text="New User" />
    </children>
 </AnchorPane>
